# cli-calc

./: .README.md.swp  .coveragerc  .gitignore  .pyproject.toml.swp  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  nitpick.toml  pyproject.toml  requirements_dev.txt  setup.cfg
.chglog/: CHANGELOG.header.md  CHANGELOG.tpl.md  config.yml  config_from_doc.yml
.github/ISSUE_TEMPLATE/: bug_report.md  change-request.md  doc.md  feature_request.md  idea.md  requirement.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  misspell.yml  sphinx.yml  test.yml
.requirements/dev/: requirements.txt  requirements_long.txt
assets/images/: cli-calc-ascii-art.txt  cli-calc.docx  cli-calc.pptx
cli_calc/: __main__.py  arg_parser.py  cli_eval.py  cli_input.py  cli_output.py  config.py  constant.py  format.py  ieee.py  input.py  input_cli.py  input_from_pipe.py  labels.json  main.py  memory.py  read_line_parser.py  wrapper.sh
dev-tools/: git-bump.ksh
dev_tools/meters/: cli_calc.json  cli_calc_shields.json  cloc.json  cloc_src.json  cloc_src_shields.json  cloc_tests.json  cloc_tests_shields.json  dev_tools.json  dev_tools_shields.json  make_shields.ksh  make_shields.py  test.json  tests.json  tests_shields.json  tests_shields.json.bak
dev_tools/print_help/: help.txt  print_help.py  prompt.txt
dev_tools/sem_ver/: .check_docs_requirements.py.swp  check_docs_requirements.py  (+1 more)
docs/: .requirements.txt.swp  Makefile  conf.py  index.rst  requirements.txt
requirements/: dev.txt
(+49 files in other folders)
