[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 99


[tool.nitpick]
style = [
  "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml",
  "./nitpick.toml",
]


[tool.poetry]
name = "cli-calc"
description = "Powerful yet easy command line calculator."
version = "0.2.18"
license = "MIT"

authors = [
  "Nikolai von Krusenstiern",
]

readme = "README.md"

repository = "https://github.com/cruisen/cli-calc"

keywords = [
  "calculator",
  "math",
  "cli",
  "command line",
  "console",
  "python",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Utilities",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.931"

wemake-python-styleguide = "^0.16"
flake8-pytest-style = "^1.6"
nitpick = "^0.31"

safety = "^1.10"

pytest = "^6.2"
pytest-cov = "^3.0"
pytest-randomly = "^3.11"

sphinx = "^4.4"
sphinx-autodoc-typehints = "^1.15"
doc8 = "^0.10"
m2r2 = "^0.3"
tomlkit = "^0.9"
semver = "^2.13.0"
pre-commit = "^2.17.0"
